feat: adaptative information

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -745,7 +745,7 @@ nav .navbar-content-right{
         font-size: 2vw;
         border: 1px #fff solid;
         padding: 2vw 5vw;
-        margin-bottom: 100px;
+        margin-bottom: 10vw;
         border-radius: 100vw;
     }
     
