--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -24,7 +24,7 @@ nav .navbar-wrapper{
     flex-direction: row;
     width: 100%;
     border-bottom: 0.5px solid #000;
-    font-size: 1.4vw;
+    font-size: 1.8vw;
     font-weight: 200;
     text-transform: uppercase;
     height: 10%;
@@ -310,6 +310,14 @@ nav .navbar-content-right{
 }
 
 .concept-description-container .concept-columns a{
+    color: #fff;
+    text-transform: uppercase;
+    border: 1px #fff solid;
+    padding: 0.8vw 2vw;
+    border-radius: 100vw;
+}
+
+.contact-container .contact-columns a{
     color: #fff;
     text-transform: uppercase;
     border: 1px #fff solid;
@@ -748,6 +756,19 @@ nav .navbar-content-right{
         margin-bottom: 10vw;
         border-radius: 100vw;
     }
+
+    .contact-container .contact-columns a{
+        text-align: center;
+        margin: 0 30vw;
+        display: flex;
+        text-transform: uppercase;
+        font-size: 2vw;
+        border: 1px #fff solid;
+        padding: 2vw 5vw;
+        margin-top: 20vw;
+        margin-bottom: 10vw;
+        border-radius: 100vw;
+    }
     
     #button{
         text-transform: capitalize;
@@ -837,7 +858,7 @@ nav .navbar-content-right{
         height: 40vw;
         background-image: url(../assets/hero-img.webp);
         background-size: cover;
-        margin-top: -20%;
+        margin-top: -0%;
         margin-left: 30%;
     }
     
@@ -902,7 +923,7 @@ nav .navbar-content-right{
     }
     
     .contact-container #collumn-image{
-        margin: 5vw 15vw 10vw;
+        margin: 30vw 15vw 10vw;
         width: 70vw;
         height: 50vh;
     }
