--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -105,7 +105,7 @@ nav .navbar-content-right{
 .overview-content-container #with-image{
     width: 47.5%;
     height: 20vw;
-    background-image: url(../assets/hero-img.webp);
+    background-image: url(../assets/code.webp);
     background-size: cover;
     margin-top: -25%;
     margin-left: 2.5%;
@@ -213,7 +213,7 @@ nav .navbar-content-right{
 
 .deliverables-content .overview-content-image{
     height: 50%;
-    background-image: url(../assets/hero-img.webp);
+    background-image: url(../assets/templo.webp);
     background-size: cover;
     margin: 10% 5% 10%;
 }
@@ -263,7 +263,7 @@ nav .navbar-content-right{
 
 .concept-container #collumn-image{
     width: 28%;
-    background-image: url(../assets/hero-img.webp);
+    background-image: url(../assets/concept.webp);
     background-size: cover;
 }
 
@@ -396,7 +396,7 @@ nav .navbar-content-right{
 .estimate-image{
     width: 30vw;
     height: 40vw;
-    background-image: url(../assets/hero-img.webp);
+    background-image: url(../assets/estimate.webp);
     background-size: cover;
     margin-top: -20%;
     margin-left: 30%;
@@ -406,7 +406,7 @@ nav .navbar-content-right{
 .contact-image{
     width: 30vw;
     height: 40vw;
-    background-image: url(../assets/hero-img.webp);
+    background-image: url(../assets/contact.webp);
     background-size: cover;
     margin-top: -20%;
     margin-left: 30%;
@@ -475,7 +475,7 @@ nav .navbar-content-right{
 
 .contact-container #collumn-image{
     width: 29%;
-    background-image: url(../assets/hero-img.webp);
+    background-image: url(../assets/contact.webp);
     background-size: cover;
     margin: 2%;
 }
@@ -511,7 +511,6 @@ nav .navbar-content-right{
     .hero-content-container .hero-content .hero-content-image{
         width: 100%;
         height: 10vh;
-        background-image: url(../assets/hero-img.webp);
         background-size: cover;
         margin-bottom: 5vh;
     }
@@ -544,7 +543,6 @@ nav .navbar-content-right{
     .overview-content-container #with-image{
         width: 85vw;
         height: 30vw;
-        background-image: url(../assets/hero-img.webp);
         background-size: cover;
         margin-top: 0;
         margin-left:0;
@@ -647,7 +645,6 @@ nav .navbar-content-right{
     .deliverables-content .overview-content-image{
         height: 20vw;
         width: 85vw;
-        background-image: url(../assets/hero-img.webp);
         background-size: cover;
         margin: 0% 7.5vw;
         padding-top: 0vh;
@@ -700,7 +697,6 @@ nav .navbar-content-right{
         height: 100vw;
         width: 70vw;
         margin: 5vw 15vw;
-        background-image: url(../assets/hero-img.webp);
         background-size: cover;
     }
     
@@ -841,7 +837,6 @@ nav .navbar-content-right{
     .estimate-image{
         width: 70vw;
         height: 50vh;
-        background-image: url(../assets/hero-img.webp);
         background-size: cover;
         margin-top: -17%;
         margin-left: 15vw;
@@ -856,7 +851,6 @@ nav .navbar-content-right{
     .contact-image{
         width: 30vw;
         height: 40vw;
-        background-image: url(../assets/hero-img.webp);
         background-size: cover;
         margin-top: -0%;
         margin-left: 30%;
